add Main class and fix some problems